Fix filtering by scanner in ScanLog screen. Fix using oneToMany fields